exercise_2.02/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
      - name: todo-volume
        persistentVolumeClaim:
          claimName: todo-claim
      containers:
        - name: backend
          image: dogamak/hy-kubernetes-todo-backend:v1.0
          imagePullPolicy: Always
          volumeMounts:
          - name: todo-volume
            mountPath: /data
        - name: frontend
          image: dogamak/hy-kubernetes-todo-frontend:v1.0
          imagePullPolicy: Always
          volumeMounts:
          - name: todo-volume
            mountPath: /data
