exercise_2.02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - name: http-backend
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http-frontend
      protocol: TCP
      port: 8081
      targetPort: 80
